ajout colonne number
