# app/Models/User.php
@@ -16,8 +16,8 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
  *     @OA\Property(property="id", type="integer", format="int64", example=1),
  *     @OA\Property(property="name", type="string", example="John Doe"),
  *     @OA\Property(property="email", type="string", format="email", example="john@example.com"),
+ *     @OA\Property(property="phone", type="string", example="+33612345678"),
  *     @OA\Property(property="role", type="string", enum={"user", "admin"}, example="user"),
- *     @OA\Property(property="email_verified_at", type="string", format="date-time", nullable=true),
  *     @OA\Property(property="created_at", type="string", format="date-time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time")
  * )
@@ -36,6 +36,7 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'phone',
         'role'
     ];
 
